<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HasilFormActivity2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hasil_form_pendaftaran"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textAlignment="center"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
            android:id="@+id/tvNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_lengkap"
            android:textSize="20sp"/>

            <TextView
                android:id="@+id/tvAlamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/almat_lengkap"
                android:layout_marginTop="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tvNomor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_hp"
                android:layout_marginTop="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tvAgama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agama"
                android:layout_marginTop="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tvKelamin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jenis_kelamin"
                android:layout_marginTop="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tvHobi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hobi"
                android:layout_marginTop="10dp"
                android:textSize="20sp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>