<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".konversiSuhu">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvUtama"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:backgroundTint="@color/putih_gading"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toTopOf="@id/btnHitung"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Spinner
                    android:id="@+id/spSuhu1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/suhu1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="20dp"/>

                <EditText
                    android:id="@+id/etSuhu1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/suhu_awal"
                    android:textSize="30sp"
                    android:background="@null"
                    android:inputType="numberDecimal"
                    android:gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/spSuhu1"
                    android:layout_marginTop="30dp"/>

                <View
                    android:id="@+id/vwGaris"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etSuhu1"
                    android:background="@color/black"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"/>

                <Spinner
                    android:id="@+id/spSuhu2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/suhu2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/vwGaris"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:id="@+id/tvSuhu2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hasil_suhu"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/spSuhu2"
                    android:layout_marginTop="30dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnHitung"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:text="@string/hitung"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="#EF0202"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>